<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">BuildingGuide</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="search">Search</string>
    <string name="normal">Normal User</string>
    <string name="deaf">Deaf User</string>
    <string name="blind">Blind User</string>
	<string name="lessnoisy">Less Noisy</string>
    <string name="verynoisy">Very Noisy</string>
    <string name="quiet">Quiet</string>
    <string name="select_user">Select User Type</string>
    <string name="select_env">Select Environment</string>
    <string name="show_schedule">Show Schedule</string>
</resources>