<?xml version="1.0" encoding="utf-8"?>
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="wrap_content"
android:layout_height="wrap_content">
<RadioGroup android:layout_width="wrap_content"
android:layout_height="wrap_content" android:orientation="vertical"
android:id="@+id/user_profile">
<RadioButton android:id="@+id/normaluser"
android:layout_width="wrap_content" android:layout_height="wrap_content"
android:checked="true"
android:text="@string/normal" >
</RadioButton>
<RadioButton android:id="@+id/blinduser" android:layout_width="wrap_content"
android:layout_height="wrap_content" android:text="@string/blind"></RadioButton>
<RadioButton android:id="@+id/deafuser" android:layout_width="wrap_content"
 
android:layout_height="wrap_content" android:text="@string/deaf"></RadioButton>
 
</RadioGroup>
</LinearLayout>